@@ -202,6 +202,17 @@
 	  </child>
 
 	  <child>
+	    <widget class="GtkCheckMenuItem" id="hw_protection1">
+	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">Enable/disable hardware protection. Please note you will have restart the emulator or select an image for changes to take effect.</property>
+	      <property name="label" translatable="yes">HW protection</property>
+	      <property name="use_underline">True</property>
+	      <property name="active">False</property>
+	      <signal name="activate" handler="on_hw_protection1_activate" last_modification_time="Mon, 14 Mar 2005 14:04:45 GMT"/>
+	    </widget>
+	  </child>
+
+	  <child>
 	    <widget class="GtkSeparatorMenuItem" id="separator22">
 	      <property name="visible">True</property>
 	    </widget>
@@ -344,7 +355,7 @@
 	      <accelerator key="H" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image18">
+		<widget class="GtkImage" id="image26">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-help</property>
 		  <property name="icon_size">1</property>
@@ -367,7 +378,7 @@
 	      <accelerator key="M" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image19">
+		<widget class="GtkImage" id="image27">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-index</property>
 		  <property name="icon_size">1</property>
@@ -458,7 +469,7 @@
 	      <signal name="activate" handler="on_bugreport1_activate" last_modification_time="Sun, 20 Feb 2005 17:58:57 GMT"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image20">
+		<widget class="GtkImage" id="image28">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-execute</property>
 		  <property name="icon_size">1</property>
