@@ -34,6 +34,8 @@ gchar *s = N_("Set ROM (image/upgrade)");
 gchar *s = N_("Emulator _options");
 gchar *s = N_("Run the calculator at its default speed (default) or at the maximum the computer can do.");
 gchar *s = N_("Restrict to actual speed");
+gchar *s = N_("Enable/disable hardware protection. Please note you will have restart the emulator or select an image for changes to take effect.");
+gchar *s = N_("HW protection");
 gchar *s = N_("_Normal view (x1)");
 gchar *s = N_("_Large view (x2)");
 gchar *s = N_("_Full screen");
