@@ -81,7 +81,7 @@ int ti68k_config_load_default(void)
     params.cpu_rate = -1;
     params.hw_rate = -1;
     params.lcd_rate = -1;
-	params.protect_on = 0;
+	params.hw_protect = 0;
 
     ticable_get_default_param(&link_cable);
     link_cable.link_type = LINK_NUL;
