@@ -95,136 +95,3 @@ int ti92p_mem_init(void)
   
     return 0;
 }
-
-uint32_t ti92p_get_long(uint32_t adr) 
-{
-    if(IN_RANGE(0x000000, adr, 0x1fffff))				// RAM access
-	{
-        return lget(adr);
-	}
-    else if(IN_RANGE(0x200000, adr, 0x5fffff))			// FLASH access
-	{
-        return (lget(adr) | wsm.ret_or);
-	}
-    else if(IN_RANGE(0x600000, adr, 0x6fffff))			// memory-mapped I/O
-	{
-       return io_get_long(adr);
-	}
-	else if(IN_RANGE(0x700000, adr, 0x7fffff))			// memory-mapped I/O (hw2)
-	{
-		return io2_get_long(adr);
-	}
-
-    return 0x14141414;
-}
-
-uint16_t ti92p_get_word(uint32_t adr) 
-{
-    if(IN_RANGE(0x000000, adr, 0x1fffff))				// RAM access
-	{
-        return wget(adr);
-	}
-    else if(IN_RANGE(0x200000, adr, 0x5fffff))			// FLASH access
-	{
-        return (wget(adr) | wsm.ret_or);
-	}
-    else if(IN_RANGE(0x600000, adr, 0x6fffff))			// memory-mapped I/O
-	{
-       return io_get_word(adr);
-	}
-	else if(IN_RANGE(0x700000, adr, 0x7fffff))			// memory-mapped I/O (hw2)
-	{
-		return io2_get_word(adr);
-	}
-
-    return 0x1414;
-}
-
-uint8_t ti92p_get_byte(uint32_t adr) 
-{
-    if(IN_RANGE(0x000000, adr, 0x1fffff))				// RAM access
-	{
-        return bget(adr);
-	}
-    else if(IN_RANGE(0x200000, adr, 0x5fffff))			// FLASH access
-	{
-        return (bget(adr) | wsm.ret_or);
-	}
-    else if(IN_RANGE(0x600000, adr, 0x6fffff))			// memory-mapped I/O
-	{
-       return io_get_byte(adr);
-	}
-	else if(IN_RANGE(0x700000, adr, 0x7fffff))			// memory-mapped I/O (hw2)
-	{
-		return io2_get_byte(adr);
-	}
-
-    return 0x14;
-}
-
-void ti92p_put_long(uint32_t adr, uint32_t arg) 
-{
-	    if(IN_RANGE(0x000000, adr, 0x1fffff))				// RAM access
-	{
-        lput(adr, arg);
-	}
-    else if(IN_RANGE(0x200000, adr, 0x5fffff))			// FLASH access
-	{
-		FlashWriteLong(adr, arg);
-	}
-    else if(IN_RANGE(0x600000, adr, 0x6fffff))			// memory-mapped I/O
-	{
-		io_put_long(adr, arg);
-	}
-	else if(IN_RANGE(0x700000, adr, 0x7fffff))			// memory-mapped I/O (hw2)
-	{
-		io2_put_long(adr, arg);
-	}
-
-    return;
-}
-
-void ti92p_put_word(uint32_t adr, uint16_t arg) 
-{
-    if(IN_RANGE(0x000000, adr, 0x1fffff))				// RAM access
-	{
-        wput(adr, arg);
-	}
-    else if(IN_RANGE(0x200000, adr, 0x5fffff))			// FLASH access
-	{
-		FlashWriteWord(adr, arg);
-	}
-    else if(IN_RANGE(0x600000, adr, 0x6fffff))			// memory-mapped I/O
-	{
-		io_put_word(adr, arg);
-	}
-	else if(IN_RANGE(0x700000, adr, 0x7fffff))			// memory-mapped I/O (hw2)
-	{
-		io2_put_word(adr, arg);
-	}
-
-    return;
-}
-
-void ti92p_put_byte(uint32_t adr, uint8_t arg) 
-{
-    // memory
-    if(IN_RANGE(0x000000, adr, 0x1fffff))				// RAM access
-	{
-        bput(adr, arg);
-	}
-    else if(IN_RANGE(0x200000, adr, 0x5fffff))			// FLASH access
-	{
-        FlashWriteByte(adr,arg);
-	}
-    else if(IN_RANGE(0x600000, adr, 0x6fffff))			// memory-mapped I/O
-	{
-		io_put_byte(adr, arg);
-	}
-	else if(IN_RANGE(0x700000, adr, 0x7fffff))			// memory-mapped I/O (hw2)
-	{
-		io2_put_byte(adr, arg);
-	}
-
-    return;
-}
