@@ -23,6 +23,7 @@ To do:
 	- [roms]  $958: fixed file pattern for Win32 file selector; fixed default 
 		path and patter for the new GTK file selector.
 	- [roms]  $960: improved management of ALPHA key on TI89 (letter/number).
+	- [roms]  $962: factorized TI89/V200 & TI92+ code (memory).
 
 - 25/02/2005, version 1.80o: roms
 	- fixed bug in ti68k_get_hw_param_block (wrong search/replace)
